Adição de endpoint para atualização de to do item, remoção de campos de to do item e ajuste no delete de to do item
