# applications/node_ts/src/app/web/routes/ToDo.routes.ts
@@ -10,4 +10,5 @@ toDoRoutes.get("/", toDoController.findAll)
 toDoRoutes.get("/:toDoId", toDoController.findOne)
 toDoRoutes.delete("/:toDoId", toDoController.deleteOne)
 toDoRoutes.delete("/item/:toDoId/:itemId", toDoController.deleteOneItem)
+toDoRoutes.put("/item/:toDoId/:itemId", toDoController.updateItem)
 toDoRoutes.patch("/item/:toDoId", toDoController.addItems)
